Update role with molecule testing framework add initial centos support and new variables for multiple access log formats

--- a/templates/logrotate.d/openresty.j2
+++ b/templates/logrotate.d/openresty.j2
@@ -2,7 +2,7 @@
   daily
   compress
   delaycompress
-  rotate 2
+  rotate {{ openresty_logrotate_rotate }}
   missingok
   nocreate
   sharedscripts
